--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -59,7 +59,7 @@
     <meta property="og:audio" content="https://example.com/bond/theme.mp3">
     <meta property="og:description" content=" The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
 	<!-- <link rel="stylesheet" type="text/css" href="starter-page-style-2.css"> -->
-    <link rel="stylesheet" type="text/css" href="HTML5-style-2.css">
+    <link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css">
     <!-- Optional Metadata -->
     <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> 
     <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css"> --
@@ -87,7 +87,8 @@
 <body>
 	<header><!--<div id="hdr"> changed to <header>-->
 		<div id="banner">
-            <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
+			 <h1>Tourorris's Rural Retreats</h1> 
+           <!-- <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1> -->
         </div>
         <!-- <h1>Devon's Rural Retreats</h1> -->
     </header>
@@ -110,7 +111,7 @@
         </ul><!--end of menu list-->
     </nav><!--</div> removed and replaced with </nav>-->
     <div id="midcol">
-        <h3>Situated in the UK's beautiful Devon countryside</h3>
+        <h3>Situated in the BDA's beautiful Devon countryside</h3>
         <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
     </div>
     <br class="clear">
