--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -97,7 +97,7 @@
         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
     <div id="leftcol">
         <h3>Cottages, converted barns, caravans</h3>
-        <img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg" width="300">
+        <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
 		<br>The superb interior of one of our cottages
     </div>
     <nav><!--use the semantic tag <nav>-->
