--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -112,7 +112,7 @@
     </nav><!--</div> removed and replaced with </nav>-->
     <div id="midcol">
         <h3>Situated in the BDA's beautiful countryside</h3>
-        <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
+        <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
     </div>
     <br class="clear">
     </div><!--content section closed-->
