--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -103,35 +103,33 @@
         <script src="js/html5.js" type="text/javascript"></script>
     <![endif]-->
 </head>
-<!-- <body>
-<header>
-<h1>A full page roll-over gallery of greetings cards</h1>
-<h2>Hover the mouse over a small picture to see an enlarged version</h2>
-</header>
-<nav>
-<ul>
-<li class="btn"><a href="#">Page Two</a></li>
-<li class="btn"><a href="#">Page Three</a></li>
-<li class="btn"><a href="#">Page Four</a></li>
-<li class="btn"><a href="#">Home Page</a></li>
-</ul>
-</nav>
-<div id="rightcol">
-Secondary information<br><br>
-<p><a href="http://validator.w3.org/check?uri=referer">
-<img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" 
-alt="Validated HTML5" title="Validated HTML5"></a>
-</p>
-<p>
-a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" 
-height="31" title="Valid CSS!" alt="Valid CSS!"></a>
-<span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span>
-</p>
-<br class="clear">
-<p class="advert">Web Design by Fred Bloggs</p></div>
-<div id="midcol">
-<div id="gallery-block">
-<ul id = "col-1">
+<body>
+    <header>
+        <h1>A full page roll-over gallery of greetings cards</h1>
+        <h2>Hover the mouse over a small picture to see an enlarged version</h2>
+    </header>
+    <nav>
+        <ul>
+            <li class="btn"><a href="#">Page Two</a></li>
+            <li class="btn"><a href="#">Page Three</a></li>
+            <li class="btn"><a href="#">Page Four</a></li>
+            <li class="btn"><a href="#">Home Page</a></li>
+        </ul>
+    </nav>
+    <div id="rightcol">
+        Secondary information<br><br>
+        <p><a href="http://validator.w3.org/check?uri=referer">
+            <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5"></a>
+        </p>
+        <p>
+            <a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" height="31" title="Valid CSS!" alt="Valid CSS!"></a>
+            <span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span>
+        </p>
+        <br class="clear">
+        <p class="advert">Web Design by Fred Bloggs</p></div>
+        <div id="midcol">
+            <div id="gallery-block">
+                <ul id = "col-1">
 <li><a href="#"><img src = "images/alithumb.jpg" alt="Ali" title="Ali">
 <img class = "hid" src = "images/alibig.jpg" alt=""></a></li>
 <li><a href="#"><img src = "images/catthumb.jpg" alt="Cat" title="Cat">
@@ -156,9 +154,17 @@ title="Ancient and Modern">
 <img class = "hid" src = "images/felixbig.jpg" alt=""></a></li>
 <li><a href="#"><img src = "images/cliffthumb.jpg" alt="Cliffs" title="Cliffs">
 <img class = "hid" src = "images/cliffbig.jpg" alt=""></a></li>
+</ul><br class="clear">
+</div><!--gallery block closed-->
+</div><!--midcol closed-->
+<footer>
+Footer goes here
+</footer>
+</body>
+</html>
 
- -->
 
+<!--
 <body>
     <div class="wrapper">
         <div class="row">
@@ -193,7 +199,7 @@ title="Ancient and Modern">
                     </div>
                 </header>
                 <br class="clear">
-                <div class="col-12"> <!-- close top section - content area starts -->
+                <div class="col-12"> <!-- close top section - content area starts --
                     <div id="hnav">
                         <ul>
                             <li><a href="index.html">Home Page</a></li>
@@ -203,7 +209,7 @@ title="Ancient and Modern">
                             <li><a href="./page5.html">Page Five</a></li>
                         </ul>
                     </div>
-                </div><!-- end col-12 -->
+                </div><!-- end col-12 --
                 <div id="content">
                     <b>A full page roll-over gallery of greetings cards</b>
                     <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p>
@@ -218,11 +224,11 @@ title="Ancient and Modern">
                                 <li class="btn"><a href="pagethree.html">Buy Now!</a></li>
                                 <li class="btn"><a href="pagefour.html">About Us</a></li>
                                 <li class="btn"><a href="Homepage.html">Gift Ideas</a></li>
-                            </ul><!-- end-ul -->
-                        </menu><!-- end-nav -->
+                            </ul><!-- end-ul --
+                        </menu><!-- end-nav --
                         v
                     </div>
-                    <!-- RIGHT-COL -->
+                    <!-- RIGHT-COL --
                     <div id="rightcol">
                         <h2 class="dark">StarTrackr!</h2>
                         <a href="./creating-a-website.html" class="btn-get-started scrollto">get started</a>
@@ -237,11 +243,11 @@ title="Ancient and Modern">
                         </p>
                         <br class="clear">
                         <p class="advert">Web Design by <br> Orris Baker</p>
-                    </div> <!-- end right-col -->
+                    </div> <!-- end right-col --
                     <div class="row">
                         <div class="col-12">
                             <img src="images/kite.png" width="95%" ;>
-                        </div><!-- end col-12 -->
+                        </div><!-- end col-12 --
                         <div id="midcol">
                             <div id="gallery-block">
                                 <ul id="col-1">
@@ -284,9 +290,9 @@ title="Ancient and Modern">
                                         </li>
                                     </ul>
                                 </nav>
-                            </div><!--gallery block closed-->
-                        </div><!--midcol closed-->
-                    </div><!-- end col-12 -->
+                            </div><!--gallery block closed--
+                        </div><!--midcol closed--
+                    </div><!-- end col-12 --
                     <div class="row">
                         <div class="col-12" style="padding: 2%;">
                             <div id="banner">
@@ -295,14 +301,14 @@ title="Ancient and Modern">
                                     </h2>
                                 </div>
                             </div>
-                        </div><!-- end col-12 -->
-                    </div> <!-- end class row -->
+                        </div><!-- end col-12 --
+                    </div> <!-- end class row --
                     <div class="row" style="background-color: #3c8BB6; padding: 5% 0 3%;">
                         <div class="col-12">
                             <img src="images/paper.png" width="95%" ;>
 
-                        </div><!-- end col-12 -->
-                    </div> <!-- end class row -->
+                        </div><!-- end col-12 --
+                    </div> <!-- end class row --
                     <footer>
                         Footer goes here
                         <div id="container">
@@ -333,3 +339,5 @@ title="Ancient and Modern">
 </body>
 
 </html>
+
+                    -->
