--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -64,12 +64,12 @@
     <meta property="og:audio" content="https://example.com/bond/theme.mp3">
     <meta property="og:description"
         content=" The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
-    <!-- <link rel="stylesheet" type="text/css" href="starter-page-style-2.css"> -->
+    <!-- <link rel="stylesheet" type="text/css" href="starter-page-style-2.css">
     <link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css">
     <!-- Optional Metadata -->
-    <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> 
-    <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css"> --
-	<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+    <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
+    <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css"> 
+	<!-- <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     
     
    <!-- <link rel="stylesheet" href="./CSS/nav.css"> -->
