--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -67,9 +67,9 @@
     <!-- <link rel="stylesheet" type="text/css" href="starter-page-style-2.css">
     <link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css">
     <!-- Optional Metadata -->
-    <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
-    <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css"> 
-	<!-- <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+    <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> --
+    <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css"> -->
+	<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     
     
    <!-- <link rel="stylesheet" href="./CSS/nav.css"> -->
