--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -124,7 +124,7 @@
             <span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span>
         </p>
         <br class="clear">
-        <p class="advert">Web Design by Fred Bloggs</p></div>
+        <p class="advert">Web Design by Orris Baker</p></div>
         <div id="midcol">
             <div id="gallery-block">
                 <ul id="col-1">
@@ -144,6 +144,7 @@
                 </ul><br class="clear">
             </div><!--gallery block closed-->
         </div><!--midcol closed-->
+        <br class="clear">
         <!--<div id=footer"> changed to <footer>-->
         <footer role="contentinfo" class="footer-inner">
             <div class="row">
