--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF">
     <title>Gallery-page-Templates</title>
     <meta name="viewport" content="width-device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../../orris0/orris0/CSS/HTML5-style-2.css">
+    
     <script type="text/javascript" src="js/jquery-1.7.js"></script>
     <script type="text/javascript" src="../orris0/js/script.js"></script>
     <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
@@ -41,9 +41,7 @@
     <!-- Optional Metadata -->
 
     <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
-    <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8">
-
-    <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
+     <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> 
 
     <link rel="stylesheet" href="./CSS/nav.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css">
