--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <meta name="author" content="Ian Andolina">
     <!-- Optional Metadata -->
 
-    <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
+    <link rel="stylesheet" href="./CSS/HTML5-style-2.css"> 
      <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> 
 
     <link rel="stylesheet" href="./CSS/nav.css">
