--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -92,13 +92,43 @@
 </head>
 
 <body>
-    <header><!--<div id="hdr"> changed to <header>-->
+    <!-- <header><!--<div id="hdr"> changed to <header>--
         <div id="banner">
             <h1>Tourorris's Rural Retreats</h1>
-            <!-- <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1> -->
+            <!-- <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1> --
         </div>
-        <!-- <h1>Devon's Rural Retreats</h1> -->
+        <!-- <h1>Devon's Rural Retreats</h1> --
+    </header> -->
+    <header class="data" id="html5styleheader"><!--<div id="hdr"> changed to <header>-->
+        <div id="banner">
+            <h1>StarTrackr!</h1>
+        </div>
+        <div id="container">
+            <p>&nbsp;</p>
+            <p>Tour Orris (default)</p>
+            <p>
+                <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
+                <a href="html5-nav.html">Page 2</a>
+                <a href="simplistic-side-by-side.html">Page 3</a>
+                <a href="simplistic-html5-java.html">Page 4</a>
+                <a href="simplistic-html5.html">Page 5</a>
+                <a href="gallery-one-col.html">Page 6</a>
+                <a href="gallery-2col.html">Page 7</a>
+            </p>
+            <p>&nbsp;</p>
+            <p class="inline-block">Practical HTML5 Project&#39;s<br>
+                <a href="gallery-3col-mix.html">Page 1</a>
+                <a href="gallery-page-validated.html">Page 2</a>
+                <a href="squares-html5.html">Page 3</a>
+                <a href="horiz-vert-menu.html">Page 4</a>
+                <a href="fig2-nifty.html">Page 5</a>
+                <a href="starter-page.html">Page 6</a>
+                <a href="index2.html">Page 7</a>
+            </p>
+            <p>&nbsp;</p>
+        </div>
     </header>
+    <!--close top section - content area starts -->
     <!--close top section - content area starts -->
     <div id="content">
         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
