--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div id="banner">
             <h1>StarTrackr!</h1>
         </div>
-        <div id="container">
+        <!-- <div id="container">
             <p>&nbsp;</p>
             <p>Tour Orris (default)</p>
             <p>
@@ -124,7 +124,7 @@
                 <a href="index2.html">Page 7</a>
             </p>
             <p>&nbsp;</p>
-        </div>
+        </div> -->
     </header>
     <!--close top section - content area starts -->
     <div id="content">
