--- a/index.html
+++ b/index.html
@@ -302,13 +302,11 @@
                                     src="../orriso/bda-13.jpg" alt=""></a></li>
                         <li><a href="#"><img src="../orris0/bda-14.jpg" alt="Nico" title="Nico"><img class="hid"
                                     src="../orriso/bda-14.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-15.jpg" alt="Child and Beach"
-                                    title="Child and Beach"><img class="hid" src="../orriso/bda-15.jpg" alt=""></a>
+                        <li><a href="#"><img src="../orris0/bda-15.jpg" alt="Child and Beach" title="Child and Beach"><img class="hid" src="../orriso/bda-15.jpg" alt=""></a>
                         </li>
                     </ul>
                     <ul id="gallerypagecol-3">
-                        <li><a href="#"><img src="../orris0/bda-16.jpg" alt="Ancient and modern"
-                                    title="Ancient and Modern"><img class="hid" src="../orriso/bda-16.jpg" alt=""></a>
+                        <li><a href="#"><img src="../orris0/bda-16.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="../orriso/bda-16.jpg" alt=""></a>
                         </li>
                         <li><a href="#"><img src="../orris0/bda-17.jpg" alt="Felix" title="Felix"><img class="hid"
                                     src="../orriso/bda-17.jpg" alt=""></a></li>
