--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -104,8 +104,9 @@
             <h1>StarTrackr!</h1>
         </div>
     </header>
+	<br class="clear">
     <!--close top section - content area starts -->
-    <!--close top section - content area starts -->
+    
     <div id="content">
         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
         <div id="leftcol">
