--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -255,7 +255,8 @@
                 <p>Tour Orris (default)</p>
                 <p>
                     <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
-                    <a href="html5-nav.html">Page 2</a>
+					<a href="gallery-page-validated.html">Page 2</a>
+                    <!-- <a href="html5-nav.html">Page 2</a> -->
                     <a href="simplistic-side-by-side.html">Page 3</a>
                     <a href="simplistic-html5-java.html">Page 4</a>
                     <a href="simplistic-html5.html">Page 5</a>
