--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -43,8 +43,7 @@
     <meta property="og:audio:secure_url" content="https://secure.example.com/sound.mp3">
     <meta property="og:audio:type" content="audio/mpeg">
     <meta property="og:audio" content="https://example.com/bond/theme.mp3">
-    <meta property="og:description"
-        content="Sean Connery found fame and fortune as the suave, sophisticated British agent, James Bond.">
+    <meta property="og:description" content="Sean Connery found fame and fortune as the suave, sophisticated British agent, James Bond.">
     <meta property="og:determiner" content="the">
     <meta property="og:locale" content="en_GB">
     <meta property="og:locale:alternate" content="fr_FR">
@@ -83,16 +82,9 @@
     <!-- SimpleLightbox plugin CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    
-    <style>
-        p {
-            color: red;
-        }
-    </style>
     <link rel="stylesheet" href="./fonts/font-awesome.min.css">
     <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/img/HTMLBadge.ico">
     <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/favicon.ico">
-
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073"
         crossorigin="anonymous"></script>
     <!--Add conditional Javascript-->
