--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Optional Metadata -->
 
     <link rel="stylesheet" href="./CSS/HTML5-style-2.css">
-    <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
+    <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./CSS/nav.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css">
