--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <br class="clear">
                 <p class="advert">Web Design by Orris Baker jr</p>
             </div>
-            <div class="data" id="gallerypagemidcol-1">
+            <div class="data" id="gallerypagemidcol">
                 <div id="gallerypagegallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ali" title="Ali"><img class="hid"
