--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
     <div class="row">
         <div class="col-12">
-            <img src="img/kite.png" max-width="95%">
+            <img src="img/kite.png">
 
             <nav class="data" id="gallerypagenav">
                 <ul>
