--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <img src="img/paper.png">
             <div class="data" id="midcol-2">
                 <div id="gallerypagegallery-block">
-                    <ul id="gallerypagecol-1">
+                    <ul id="col-1">
                         <li><a href="#"><img src="../orris0/bda-10.jpg" alt="Ali" title="Ali"><img class="hid"
                                     src="../orris0/bda-10.jpg" alt=""></a></li>
                         <li><a href="#"><img src="../orris0/bda-11.jpg" alt="Cat" title="Cat"><img class="hid"
@@ -273,7 +273,7 @@
                         <li><a href="#"><img src="../orris0/bda-12.jpg" alt="Beach" title="Beach"><img class="hid"
                                     src="../orriso/bda-12.jpg" alt=""></a></li>
                     </ul>
-                    <ul id="gallerypagecol-2">
+                    <ul id="col-2">
                         <li><a href="#"><img src="../orris0/bda-13.jpg" alt="Ferns" title="Ferns"><img class="hid"
                                     src="../orriso/bda-13.jpg" alt=""></a></li>
                         <li><a href="#"><img src="../orris0/bda-14.jpg" alt="Nico" title="Nico"><img class="hid"
@@ -282,7 +282,7 @@
                                     title="Child and Beach"><img class="hid" src="../orriso/bda-15.jpg" alt=""></a>
                         </li>
                     </ul>
-                    <ul id="gallerypagecol-3">
+                    <ul id="col-3">
                         <li><a href="#"><img src="../orris0/bda-16.jpg" alt="Ancient and modern"
                                     title="Ancient and Modern"><img class="hid" src="../orriso/bda-16.jpg" alt=""></a>
                         </li>
