--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta charset="UTF">
     <title>Gallery-page-Templates</title>
     <meta name="viewport" content="width-device-width, initial-scale=1">
-
-
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="format-detection" content="telephone=no">
     <meta property="og:title" content="A Basic HTML5 Template">
@@ -223,7 +220,7 @@
             <div class="data" id="gallerypagemidcol">
                 <div id="gallerypagegallery-block">
                     <ul id="col-1">
-                        <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ali" title="Ali"><img class="hid"
+                        <li><a href="#"><img src="../orris0/images/bda.jpg"  width="70" height="103" alt="Ali" title="Ali"><img class="hid"
                                     src="../orris0/images/bda.jpg" alt=""></a></li>
                         <li><a href="#"><img src="../orris0/bda-1.jpg" alt="Cat" title="Cat"><img class="hid"
                                     src="../orris0/bda-1.jpg" alt=""></a></li>
