--- a/index.html
+++ b/index.html
@@ -220,12 +220,9 @@
             <div class="data" id="gallerypagemidcol">
                 <div id="gallerypagegallery-block">
                     <ul id="col-1">
-                        <li><a href="#"><img src="../orris0/images/bda.jpg"  width="70" height="103" alt="Ali" title="Ali"><img class="hid"
-                                    src="../orris0/images/bda.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-1.jpg" alt="Cat" title="Cat"><img class="hid"
-                                    src="../orris0/bda-1.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-2.jpg" alt="Beach" title="Beach"><img class="hid"
-                                    src="../orris0/bda-2.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali" title="Ali"><img class="hid" src="../orris0/images/bda.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="../orris0/bda-1.jpg" width="70" height="103" alt="Cat" title="Cat"><img class="hid" src="../orris0/bda-1.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="../orris0/bda-2.jpg" width="70" height="103" alt="Beach" title="Beach"><img class="hid" src="../orris0/bda-2.jpg" alt=""></a></li>
                     </ul>
                     <ul id="col-2">
                         <li><a href="#"><img src="../orris0/bda-3.jpg" alt="Ferns" title="Ferns"><img class="hid"
