--- a/index.html
+++ b/index.html
@@ -225,15 +225,15 @@
                         <li><a href="#"><img src="../orris0/bda-2.jpg" width="70" height="103" alt="Beach" title="Beach"><img class="hid" src="../orris0/bda-2.jpg" alt=""></a></li>
                     </ul>
                     <ul id="col-2">
-                        <li><a href="#"><img src="../orris0/bda-3.jpg" alt="Ferns" title="Ferns"><img class="hid" src="../orris0/bda-3.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-4.jpg" alt="Nico" title="Nico"><img class="hid" src="../orris0/bda-4.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-5.jpg" alt="Child and Beach" title="Child and Beach"><img class="hid" src="../orris0/bda-5.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="../orris0/bda-3.jpg" width="70" height="103" alt="Ferns" title="Ferns"><img class="hid" src="../orris0/bda-3.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="../orris0/bda-4.jpg" width="70" height="103" alt="Nico" title="Nico"><img class="hid" src="../orris0/bda-4.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="../orris0/bda-5.jpg" width="70" height="103" alt="Child and Beach" title="Child and Beach"><img class="hid" src="../orris0/bda-5.jpg" alt=""></a></li>
                     </ul>
                     <ul id="col-3">
-                        <li><a href="#"><img src="../orris0/bda-6.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="i../orris0/bda-6.jpg" alt=""></a>
+                        <li><a href="#"><img src="../orris0/bda-6.jpg" width="70" height="103" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="i../orris0/bda-6.jpg" alt=""></a>
                         </li>
-                        <li><a href="#"><img src="../orris0/bda-7.jpg" alt="Felix" title="Felix"><img class="hid" src="../orris0/bda-7.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-8.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="../orris0/bda-8.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="../orris0/bda-7.jpg" width="70" height="103" alt="Felix" title="Felix"><img class="hid" src="../orris0/bda-7.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="../orris0/bda-8.jpg" width="70" height="103" alt="Cliffs" title="Cliffs"><img class="hid" src="../orris0/bda-8.jpg" alt=""></a></li>
                     </ul><br class="clear">
                 </div><!--gallery block closed-->
             </div><!--midcol closed-->
@@ -242,7 +242,7 @@
 
     <div class="row">
         <div class="col-12" style="padding: 2%;">
-            <h2 class="dark">Welcome to Flexy!</h2>
+            <h2 class="dark">Welcome to MJ's Practical HTML5 Projects for Fun and Profit!</h2>
         </div>
     </div>
 
