--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@
                         <li><a href="#"><img src="../orris0/bda-5.jpg" width="70" height="103" alt="Child and Beach" title="Child and Beach"><img class="hid" src="../orris0/bda-5.jpg" alt=""></a></li>
                     </ul>
                     <ul id="col-3">
-                        <li><a href="#"><img src="../orris0/bda-6.jpg" width="70" height="103" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="i../orris0/bda-6.jpg" alt=""></a>
-                        </li>
+                        <li><a href="#"><img src="../orris0/bda-6.jpg" width="70" height="103" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="../orris0/bda-6.jpg" alt=""></a></li>
                         <li><a href="#"><img src="../orris0/bda-7.jpg" width="70" height="103" alt="Felix" title="Felix"><img class="hid" src="../orris0/bda-7.jpg" alt=""></a></li>
                         <li><a href="#"><img src="../orris0/bda-8.jpg" width="70" height="103" alt="Cliffs" title="Cliffs"><img class="hid" src="../orris0/bda-8.jpg" alt=""></a></li>
                     </ul><br class="clear">
