--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
         <div class="col-12">
             <img src="img/paper.png">
-            <div class="data" id="midcol-2">
+            <div class="data" id="gallerypagemidcol">
                 <div id="gallerypagegallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/bda-10.jpg" alt="Ali" title="Ali"><img class="hid"
