--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             </nav>
             <div id="gallerypagerightcol">
                 Startrackr<br><br>
-                <p><a href="http://validator.w3.org/check?uri=referer">
+                <p><a href="https://validator.w3.org/check?uri=referer">
                         <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64"
                             alt="Validated HTML5" title="Validated HTML5"></a>
                 </p>
