--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
     <div class="row">
         <div class="col-12">
-            <img src="img/kite.png">
+            <img src="img/kite.png" width="960">
 
             <nav class="data" id="gallerypagenav">
                 <ul>
