--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         Validated by the World Wide Web Consortium</span>
                 </p>
                 <br class="clear">
-                <p class="advert">Web Design by Orris Baker jr</p>
+                <p class="advert">Web Design by <br> Orris Baker jr</p>
             </div>
             <div class="data" id="gallerypagemidcol">
                 <div id="gallery-block">
