--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
         <div class="col-12">
-            <img src="img/paper.png">
+            <img id="paper" src="img/paper.png">
             <div class="data" id="gallerypagemidcol">
                 <div id="gallerypagegallery-block">
                     <ul id="col-1">
