--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <div class="col-12">
             <img id="paper" src="img/paper.png">
             <div class="data" id="gallerypagemidcol">
-                <div id="gallerypagegallery-block">
+                <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/bda-10.jpg" alt="Ali" title="Ali"><img class="hid"
                                     src="../orris0/bda-10.jpg" alt=""></a></li>
