--- a/index.html
+++ b/index.html
@@ -112,75 +112,8 @@
             <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
         </div>
         <br class="clear">
-    </div><!--content section closed-->
-    <!--
-    <div class="wrapper">
-        <div class="row">
-            <div class="col-12">
-
-                
-                <!-- <body>
-        <div class="wrapper">
-	    <div class="row">
-	        <div class="col-12">        
-                    <header class="data" id="gallerypageheader><!--<div id="hdr"> changed to <header>--
-                        <h1>Practical HTML5 project&#39;s for fun and profit!</h1>
-                        <div id="container">
-                            <p>&nbsp;</p>
-                            <p>Tourorris's (Rural Retreats/p>
-                            <p>
-                                <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
-                                <a href="html5-nav.html">Page 2</a>
-                                <a href="simplistic-side-by-side.html">Page 3</a>
-                                <a href="simplistic-html5-java.html">Page 4</a>
-                                <a href="simplistic-html5.html">Page 5</a>
-                                <a href="gallery-one-col.html">Page 6</a>
-                                <a href="gallery-2col.html">Page 7</a>
-                            </p>
-                            <p>&nbsp;</p>
-                            <p class="inline-block">Practical HTML5 Project&#39;s<br>
-                                <a href="gallery-3col-mix.html">Page 1</a>
-                                <a href="gallery-page-validated.html">Page 2</a>
-                                <a href="squares-html5.html">Page 3</a>
-                                <a href="horiz-vert-menu.html">Page 4</a>
-                                <a href="fig2-nifty.html">Page 5</a>
-                                <a href="starter-page.html">Page 6</a>
-                                <a href="index2.html">Page 7</a>
-                            </p>
-                            <p>&nbsp;</p>
-                        </div>
-                    </header> -->
-    <!--close top section - content area starts -->
-    <!--close top section - content area starts --
-                <div class="data" id="html5stylecontent">
-                    <h2>Award winning accommodation, self catering or bed and breakfast</h2>
-                    <div class="data" id="html5styleleftcol">
-                        <h3>Cottages, converted barns, caravans</h3>
-                        <img alt="Cottage interior" title="Cottage interior" height="225"
-                            src="../orris0/images/bda2.jpg" width="300"><br>The superb interior of one of our cottages
-                    </div>
-                    <nav class="data" id="html5stylenav"><!--use the semantic tag <nav>--
-                        <ul><!--start of menu list--
-                            <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                            <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                            <li class="btn"><a href="index2.html" title="Frequently Asked Questions">Information</a>
-                            </li>
-                            <li class="btn"><a href="HTML5-Ch1-7.html" title="Local attractions">Attractions</a></li>
-                            <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
-                            <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
-                        </ul><!--end of menu list--
-                    </nav><!--</div> removed and replaced with </nav>--
-                    <div class="data" id="html5stylemidcol">
-                        <h3>Situated in the BDA's beautiful countryside</h3>
-                        <img title="Devon countryside" alt="Devon countryside" src="../orris0/images/bda.gif"
-                            height="229" width="398">
-                    </div>
-                    <br class="clear">
-                    <!--<div id=footer"> changed to <footer>--
-                    </footer> --
-                </div>
-            </div><!-- end .row -->
-
+    </div>
+	<!--content section closed-->
     <div class="row">
         <div class="col-12">
             <img id="kite" src="img/kite.png">
