--- a/index.html
+++ b/index.html
@@ -175,29 +175,29 @@
             <div class="data" id="gallerypagemidcol">
                 <div id="gallery-block">
                     <ul id="col-1">
-                        <li><a href="#"><img src="../orris0/bda-10.jpg" alt="Ali" title="Ali"><img class="hid"
+                        <li><a href="#"><img src="../orris0/bda-10.jpg" width="70" height="103" alt="Ali" title="Ali"><img class="hid"
                                     src="../orris0/bda-10.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-11.jpg" alt="Cat" title="Cat"><img class="hid"
+                        <li><a href="#"><img src="../orris0/bda-11.jpg" width="70" height="103" alt="Cat" title="Cat"><img class="hid"
                                     src="../orris0/bda-11.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-12.jpg" alt="Beach" title="Beach"><img class="hid"
+                        <li><a href="#"><img src="../orris0/bda-12.jpg" width="70" height="103" alt="Beach" title="Beach"><img class="hid"
                                     src="../orriso/bda-12.jpg" alt=""></a></li>
                     </ul>
                     <ul id="col-2">
-                        <li><a href="#"><img src="../orris0/bda-13.jpg" alt="Ferns" title="Ferns"><img class="hid"
+                        <li><a href="#"><img src="../orris0/bda-13.jpg" width="70" height="103" alt="Ferns" title="Ferns"><img class="hid"
                                     src="../orriso/bda-13.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-14.jpg" alt="Nico" title="Nico"><img class="hid"
+                        <li><a href="#"><img src="../orris0/bda-14.jpg" width="70" height="103" alt="Nico" title="Nico"><img class="hid"
                                     src="../orriso/bda-14.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-15.jpg" alt="Child and Beach"
+                        <li><a href="#"><img src="../orris0/bda-15.jpg" width="70" height="103" alt="Child and Beach"
                                     title="Child and Beach"><img class="hid" src="../orriso/bda-15.jpg" alt=""></a>
                         </li>
                     </ul>
                     <ul id="col-3">
-                        <li><a href="#"><img src="../orris0/bda-16.jpg" alt="Ancient and modern"
+                        <li><a href="#"><img src="../orris0/bda-16.jpg" width="70" height="103" alt="Ancient and modern"
                                     title="Ancient and Modern"><img class="hid" src="../orriso/bda-16.jpg" alt=""></a>
                         </li>
-                        <li><a href="#"><img src="../orris0/bda-17.jpg" alt="Felix" title="Felix"><img class="hid"
+                        <li><a href="#"><img src="../orris0/bda-17.jpg" width="70" height="103" alt="Felix" title="Felix"><img class="hid"
                                     src="../orriso/bda-17.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-18.jpg" alt="Cliffs" title="Cliffs"><img class="hid"
+                        <li><a href="#"><img src="../orris0/bda-18.jpg" width="70" height="103" alt="Cliffs" title="Cliffs"><img class="hid"
                                     src="../orriso/bda-18.jpg" alt=""></a></li>
                     </ul><br class="clear">
                 </div><!--gallery block closed-->
