--- a/index.html
+++ b/index.html
@@ -167,8 +167,6 @@
             <h2 class="dark">Welcome to MJ's Practical HTML5 Projects for Fun and Profit!</h2>
         </div>
     </div>
-
-
     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
         <div class="col-12">
             <img id="paper" src="img/paper.png">
@@ -208,46 +206,46 @@
     <div class="row" style="background-color: #F6931E;">
         <div class="col-11">
             <h2>Get ready for take off!</h2>
-            <!-- <div class="data" id="midcol-3">
+            <div class="data" id="midcol-3">
                             <div id="gallerypagegallery-block">
                                 <ul id="gallerypagecol-1">
-                                    <li><a href="#"><img src="../orris0/bda-9.jpg" alt="Ali" title="Ali"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/bda-9.jpg" alt="Cat" title="Cat"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/bda-9.jpg" alt="Beach" title="Beach"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Ali" title="Ali"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Cat" title="Cat"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Beach" title="Beach"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
                                 </ul>
                                 <ul id="gallerypagecol-2">
-                                    <li><a href="#"><img src="../orris0/bda-9.jpg" alt="Ferns" title="Ferns"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/bda-9.jpg" alt="Nico" title="Nico"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/bda-9.jpg" alt="Child and Beach" title="Child and Beach"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Ferns" title="Ferns"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Nico" title="Nico"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Child and Beach" title="Child and Beach"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
                                 </ul>
                                 <ul id="gallerypagecol-3">
-                                    <li><a href="#"><img src="../orris0/bda-9.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/bda-9.jpg" alt="Felix" title="Felix"><img class = "hid" src="../orris0/bda-9.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/bda-9.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Felix" title="Felix"><img class = "hid" src="../orris0/bda-9.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Cliffs" title="Cliffs"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
                                 </ul><br class="clear">
-                            </div><!--gallery block closed--
+                            </div><!--gallery block closed-->
                         </div><!--midcol closed-->
         </div> <!-- end col-11 -->
         <div class="col-3">
             <img src="img/take-off.png">
-            <!-- <div id="gallerypagemidcol">
+            <div id="gallerypagemidcol">
                             <div id="gallerypagegallery-block">
                                 <ul id="gallerypagecol-10">
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
                                 </ul>
                                 <ul id="gallerypagecol-11">
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ferns" title="Ferns"><img class="hid" src="images/fernsbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Nico" title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Child and Beach" title="Child and Beach"><img class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ferns" title="Ferns"><img class="hid" src="images/fernsbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Nico" title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Child and Beach" title="Child and Beach"><img class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
                                 </ul>
                                 <ul id="gallerypagecol-12">
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Felix" title="Felix"><img class = "hid" src="images/felixbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Felix" title="Felix"><img class = "hid" src="images/felixbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                                 </ul><br class="clear">
-                            </div><!--gallery block closed-- 
+                            </div><!--gallery block closed--> 
                         </div><!--midcol closed-->
         </div>
     </div>
