--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         </div><!--midcol closed-->
         </div> <!-- end col-11 -->
         <div class="col-3">
-            <img src="img/take-off.png">
+            <img id="take-off" src="img/take-off.png">
             <div id="gallerypagemidcol">
                             <div id="gallerypagegallery-block">
                                 <ul id="gallerypagecol-10">
