--- a/index.html
+++ b/index.html
@@ -253,73 +253,73 @@
     <div class="row" style="background-color: #1ABC9C;">
         <div class="col-11">
             <h2>We're flying around the globe.</h2>
-            <!-- <div id="gallerypagemidcol">
+            <div id="gallerypagemidcol">
                             <div id="gallerypagegallery-block">
                                 <ul id="gallerypagecol-13">
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
                                 </ul>
                                 <ul id="gallerypagecol-14">
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ferns" title="Ferns"><img class="hid" src="images/fernsbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Nico" title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Child and Beach" title="Child and Beach"><img class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ferns" title="Ferns"><img class="hid" src="images/fernsbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Nico" title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Child and Beach" title="Child and Beach"><img class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
                                 </ul>
                                 <ul id="gallerypagecol-15">
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Felix" title="Felix"><img class = "hid" src="images/felixbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Felix" title="Felix"><img class = "hid" src="images/felixbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                                 </ul><br class="clear">
-                            </div><!--gallery block closed--
+                            </div><!--gallery block closed-->
                         </div><!--midcol closed -->
         </div>
         <div class="col-3">
-            <img src="img/orange-globe.png">
-            <!-- <div id="gallerypagemidcol">
+            <img id="orange-globe" src="img/orange-globe.png">
+            <div id="gallerypagemidcol">
                             <div id="gallerypagegallery-block">
                                 <ul id="gallerypagecol-16">
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
                                 </ul>
                                 <ul id="gallerypagecol-17">
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ferns" title="Ferns"><img class="hid" src="images/fernsbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Nico" title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Child and Beach" title="Child and Beach"><img class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ferns" title="Ferns"><img class="hid" src="images/fernsbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Nico" title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Child and Beach" title="Child and Beach"><img class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
                                 </ul>
                                 <ul id="gallerypagecol-18">
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Felix" title="Felix"><img class = "hid" src="images/felixbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Felix" title="Felix"><img class = "hid" src="images/felixbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg"vwidth="70" height="103" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                                 </ul><br class="clear">
-                            </div><!--gallery block closed--
+                            </div><!--gallery block closed-->
                         </div><!--midcol closed -->
         </div>
     </div>
-    <!-- <div class="row" style="background-color: #E5EF3F;">
+    <div class="row" style="background-color: #E5EF3F;">
                     <div class="col-11">
                         <h2>Above the clouds &amp; over the sea.</h2>
-                        <!-- <div id="gallerypagemidcol">
+                        <div id="gallerypagemidcol">
                             <div id="gallerypagegallery-block">
                                 <ul id="gallerypagecol-19">
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
                                 </ul>
                                 <ul id="gallerypagecol-20">
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ferns" title="Ferns"><img class="hid" src="images/fernsbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Nico" title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Child and Beach" title="Child and Beach"><img class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ferns" title="Ferns"><img class="hid" src="images/fernsbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Nico" title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Child and Beach" title="Child and Beach"><img class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
                                 </ul>
                                 <ul id="gallerypagecol-21">
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Felix" title="Felix"><img class = "hid" src="images/felixbig.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Felix" title="Felix"><img class = "hid" src="images/felixbig.jpg" alt=""></a></li>
+                                    <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                                 </ul><br class="clear">
-                            </div><!--gallery block closed--
-                    </div><!--end col-11 --
+                            </div><!--gallery block closed-->
+                    </div><!--end col-11 -->
 		    <div class="col-3">
-                        <img src="img/waves.png">
+                        <img id="waves" src="img/waves.png">
                     </div>
                 </div><!--end class-row -->
 
@@ -562,7 +562,7 @@
                     <div class="col-11">
                         <h2>In just 42 hours and 27 minutes.</h2>
                         <div class="col-3">
-                            <img class="circle" src="img/plane.png" width="95%" ;>
+                            <img id="plane" class="circle" src="img/plane.png" width="960px" ;>
                         </div> <!-- end col-3 -->
                     </div><!-- end class col-11 -->
                 </div> <!-- end class row --><!-- end class row -->
