--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF">
     <title>Gallery-page-Templates</title>
-	<link rel="stylesheet" href="./CSS/HTML5-style-2.css">
+	<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css"> -->
     <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
     <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8" />
     <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
