--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <div class="col-11">
             <h2>Get ready for take off!</h2>
             <div class="data" id="gallerypagemidcol-2">
-                <div id="gallery-block">
+                <div id="gallerypagegallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
