--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <p class="advert">Web Design by <br> Orris Baker jr</p>
             </div>
             <div class="data" id="gallerypagemidcol">
-                <div id="gallerypagegallery-block">
+                <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="../orris0/images/bda.jpg" alt=""></a></li>
